# summarizer-worker

./: .coverage  .gitignore  .pylintrc  Dockerfile  README.md  log.txt  main.py  pyproject.toml  test.ipynb  정리.md
summarizer/: exception.py
summarizer/domain/: base.py
summarizer/domain/model/: Feature.py  detector.py  face.py  feature.py  image.py  video.py
summarizer/infrastructure/: event_listener.py  now.py  rabbit_listener.py  redis_listener.py  uuid.py
summarizer/infrastructure/repository/: __init__.py  feature_repository.py  s3_repository.py  video_repository.py
summarizer/interface/: container.py  handler.py  settings.py  sink_app.py
summarizer/log/: logger.py
summarizer/service/: base.py  command.py
tests/domain/: test_video.py
